--- a/samulab.html
+++ b/samulab.html
@@ -82,7 +82,7 @@
                   </div>
                 </br>
                   <div class="col-lg-8 text-center">
-                    <h4>><(((º> &nbsplatest newsss this is a test &nbsp&nbsp><(((º></h4>
+                    <h4>><(((º> &nbsplatest news &nbsp&nbsp><(((º></h4>
                     <!-- Place <div> tag where you want the feed to appear -->
                     <div id="curator-feed-default-feed-layout"><a href="https://curator.io" target="_blank" class="crt-logo crt-tag">Powered by Curator.io</a></div>
                     <!-- The Javascript can be moved to the end of the html page before the </body> tag -->
