--- a/samulab.html
+++ b/samulab.html
@@ -50,7 +50,7 @@
         });
       });
     </script>
-    <script src="js/jquery.nicescroll.min.js"></script>
+    <scriptasdasdasdasdas src="js/jquery.nicescroll.min.js"></script>
     <script>
       // A $( document ).ready() block.
       $( document ).ready(function() {
